--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hae Beom Lee"
   avatar           : "lee2.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : ""
   location         : "Daejeon, Korea"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
