--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hae Beom Lee"
-  avatar           : "lee2.png"
+  avatar           : "lee2.jpg"
   bio              : ""
   location         : "Daejeon, Korea"
   employer         :
