--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hae Beom Lee"
-  avatar           : "lee2.pnb"
+  avatar           : "lee2.png"
   bio              : "Ph.D student at KAIST"
   location         : "Daejeon, Korea"
   employer         :
