--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hae Beom Lee"
   avatar           : "lee2.png"
-  bio              : "Ph.D student at KAIST"
+  bio              : "Ph.D candidate at KAIST graduating August 2022"
   location         : "Daejeon, Korea"
   employer         :
   pubmed           :
