--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Hae Beom Lee"
   avatar           : "lee2.png"
-  bio              : "Ph.D candidate at KAIST graduating August 2022"
-  location         : "Daejeon, Korea"
+  bio              : "Postdoctoral researcher at Mila"
+  location         : "Montreal, Canada"
   employer         :
   pubmed           :
   googlescholar    :
