--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Hae Beom Lee"
   avatar           : "lee2.png"
-  bio              : "Postdoctoral researcher at Mila"
-  location         : "Montreal, Canada"
+  bio              : "An assitant professor at Korea University, EE"
+  location         : "Seoul, Korea"
   employer         :
   pubmed           :
   googlescholar    :
-  email            : "haebeom dot lee at kaist dot ac dot kr"
+  email            : "haebeomlee dot korea dot ac dot kr"
   researchgate     :
   uri              :
   bitbucket        :
